# pubmed_fetcher

./: README.md.py  fetch_pubmed.py  pubmed_results.csv  pyproject.toml  script.py
