[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetches research papers from PubMed API"
authors = [
    {name = "adlanavya0729@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
